<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<ImageView
		    android:id="@+id/imgback"
		    android:layout_width="60dp"
		    android:layout_height="@dimen/dimen_height_title"
		    android:src="@drawable/back"
		    android:background="@drawable/selector_imageback"
		    android:contentDescription="@string/app_img" />
	    <TextView
	        android:id="@+id/Tvtitle"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/dimen_height_title"
	        android:textSize="@dimen/size_title"
	  		android:gravity="center"
	  		android:textColor="@color/color_button_fore"
	        android:layout_weight="1"
	        android:background="@color/color_title_bg"
	        android:text="@string/updpwd_title" />
	</LinearLayout>

	<AutoCompleteTextView
        android:id="@+id/txtoldpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height"
        android:layout_marginTop="@dimen/dimen_margintop"
        android:textSize="@dimen/size_text"
        android:background="@color/color_bg_controle"
        android:hint="@string/updpwd_txtoldpassword" 
        android:inputType="textPassword">
        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/txtnewpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/size_text"
        android:background="@color/color_bg_controle"
        android:hint="@string/updpwd_txtnewpassword"
        android:inputType="textPassword">
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/txtreppassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/size_text"
        android:background="@color/color_bg_controle"
        android:hint="@string/updpwd_txtreppassword"
        android:inputType="textPassword">
    </AutoCompleteTextView>
     
    <Button
        android:id="@+id/btnsave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height"
        android:textSize="@dimen/size_text"
        android:textColor="@color/color_button_fore"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_button"
        android:text="@string/updpwd_btnsave" />
</LinearLayout>
