<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
	<TextView
	        android:id="@+id/txttitle"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/dimen_height_title"
	        android:textSize="@dimen/size_title"
	  		android:gravity="center"
	        android:textColor="@color/color_button_fore"
	        android:background="@color/color_title_bg"
	        android:text="@string/default_titleon" />
	<ScrollView
         android:id="@+id/scrollview1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:layout_marginTop="2dp"
         android:orientation="vertical">
    <LinearLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:orientation="vertical" > 
		
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <com.qdzq.control.ControlImageTextViewH
	           android:id="@+id/tvdowncount"
	           android:layout_width="match_parent"
	           android:layout_height="@dimen/dimen_height"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:layout_weight="1"
	           android:drawableLeft="@drawable/alert"
	           android:text="@string/default_tvdowncount" />
		</LinearLayout>
		
		<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="2dp"
	    android:orientation="horizontal" >
		    <com.qdzq.control.ControlImageTextViewH
	           android:id="@+id/tvupcount"
	           android:layout_width="match_parent"
	           android:layout_height="@dimen/dimen_height"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:layout_weight="1"
	           android:drawableLeft="@drawable/alert"
	           android:text="@string/default_tvupcount" />
		</LinearLayout>
		
	    <View android:layout_height="2px" android:background="#EBEBEB" android:layout_width="fill_parent"></View>
	    
	   	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="2dp"
	    android:orientation="horizontal" >
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/BtnDown"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/ico1"
	           android:gravity="center"
	           android:text="@string/default_btndown" />
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/BtnUp"
	           android:layout_marginLeft="1dp"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/ico2"
	           android:gravity="center"
	           android:text="@string/default_btnup" />
		</LinearLayout>
		
		<View android:layout_height="2px" android:background="#EBEBEB" android:layout_width="fill_parent"></View>
		
	   	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="3dp"
		    android:orientation="horizontal" >
	    	<com.qdzq.control.ControlImageTextViewH
	           android:id="@+id/tvwaitcount"
	           android:layout_width="match_parent"
	           android:layout_height="@dimen/dimen_height"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:layout_weight="1"
	           android:drawableLeft="@drawable/alert"
	           android:text="@string/default_tvwaitcount" />
		</LinearLayout>
		
	   	<View android:layout_height="2px" android:background="#EBEBEB" android:layout_width="fill_parent"></View>
	   	
		<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="1dp"
	    android:orientation="horizontal" >
	    	<com.qdzq.control.ControlImageTextView
	           android:id="@+id/BtnBlue"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/ico4"
	           android:gravity="center"
	           android:text="@string/default_btnblue" />
		    <com.qdzq.control.ControlImageTextView
		           android:id="@+id/BtnOk"
		           android:layout_width="match_parent"
		           android:layout_height="100dp"
		           android:background="@drawable/selector_image"
		           android:textSize="@dimen/size_text"
		           android:gravity="center"
		           android:layout_weight="1"
		           android:layout_marginLeft="1dp"
		           android:drawableTop="@drawable/ico3"
		           android:text="@string/default_btnok" />

		</LinearLayout>
		
		<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="1dp"
	    android:orientation="horizontal" >
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/BtnUpdPwd"
	           android:layout_marginLeft="1dp"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/ico5"
	           android:gravity="center"
	           android:text="@string/default_btnupdpwd" />
		<com.qdzq.control.ControlImageTextView
		       android:layout_marginLeft="1dp"
	           android:id="@+id/BtnExit"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/ico6"
	           android:gravity="center"
	           android:text="@string/default_btnexit" />
		</LinearLayout>
	</LinearLayout>	
	</ScrollView>
</LinearLayout>
