<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<ImageView
		    android:id="@+id/imgback"
		    android:layout_width="60dp"
		    android:layout_height="@dimen/dimen_height_title"
		    android:src="@drawable/back"
		    android:background="@drawable/selector_imageback"
		    android:contentDescription="@string/app_img" />
	    <TextView
	        android:id="@+id/Tvtitle"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/dimen_height_title"
	        android:textSize="@dimen/size_title"
	  		android:gravity="center"
	        android:layout_weight="1"
	        android:textColor="@color/color_button_fore"
	        android:background="@color/color_title_bg"
	        android:text="@string/portinit_title" />
	</LinearLayout>
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_bg_controle"
    android:layout_marginTop="@dimen/dimen_margintop"
    android:orientation="vertical" >
	    <Spinner
	        android:id="@+id/spblue"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    <Button
	        android:id="@+id/btnrun"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/dimen_height"
	        android:layout_marginLeft="1dp"
	        android:textColor="@color/color_button_fore"
	        android:textSize="@dimen/size_text"
	        android:background="@drawable/selector_button"
	        android:text="@string/portinit_btnrun" />
    </LinearLayout>
    
	<ScrollView
         android:id="@+id/scrollview0"
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:scrollbars="none"
         android:layout_marginTop="@dimen/dimen_margintop"
         android:orientation="vertical">
    <LinearLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:orientation="vertical" > 
	    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal" >
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/btndel"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/portdel"
	           android:gravity="center"
	           android:text="@string/portinit_btndel" />
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/btninit"
	           android:layout_marginLeft="1dp"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/portunit"
	           android:gravity="center"
	           android:text="@string/portinit_btninit" />
		</LinearLayout>
		<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal" >
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/btnprec"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:layout_marginTop="1dp"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/portprec"
	           android:gravity="center"
	           android:text="@string/portinit_btnprec" />
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/btnstore"
	           android:layout_marginLeft="1dp"
	           android:layout_marginTop="1dp"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/portstore"
	           android:gravity="center"
	           android:text="@string/portinit_btnstore" />
		</LinearLayout>
		<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal" >
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/btnunit"
	          android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:layout_marginTop="1dp"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/portunit"
	           android:gravity="center"
	           android:text="@string/portinit_btnunit" />
	    <com.qdzq.control.ControlImageTextView
	           android:id="@+id/btntime"
	           android:layout_marginLeft="1dp"
	           android:layout_marginTop="1dp"
	           android:layout_width="match_parent"
	           android:layout_height="100dp"
	           android:layout_weight="1"
	           android:background="@drawable/selector_image"
	           android:textSize="@dimen/size_text"
	           android:drawableTop="@drawable/porttime"
	           android:gravity="center"
	           android:text="@string/portinit_btntime" />
		</LinearLayout>
	    <ScrollView
         android:id="@+id/scrollview1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:scrollbars="none"
         android:layout_marginTop="@dimen/dimen_margintop"
         android:orientation="vertical">    
         <LinearLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:orientation="vertical" > 
         	<CheckBox
	        android:id="@+id/cklog"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/dimen_height_title"
	        android:background="@color/color_bg_controle"
	        android:checked="true"
	        android:layout_gravity="right"
	        android:text="@string/show_log" />
			<TextView
		        android:id="@+id/tvlog"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:lines="50"
		        android:background="@color/color_bg_controle"
		        android:layout_marginTop="2dp"
		        android:text="" />
		</LinearLayout>
		</ScrollView>
	</LinearLayout>
	</ScrollView>
</LinearLayout>
