<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txttitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_title"
        android:textSize="@dimen/size_title"
  		android:gravity="center"
        android:textColor="@color/color_button_fore"
        android:background="@color/color_title_bg"
        android:text="@string/about_title" />

     <LinearLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:orientation="vertical" > 
        <!-- <ImageView
	      	android:id="@+id/imgabout"
	      	android:layout_width="match_parent"
	      	android:layout_height="wrap_content"
	      	android:adjustViewBounds="true" 
	      	android:src="@drawable/log" 
	      	android:background="#00000000"
	      	android:contentDescription="@string/app_img"/> -->
        <Button
	        android:id="@+id/btnversion"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/dimen_height"
	        android:layout_marginRight="1dp"
	        android:textColor="@color/color_button_fore"
	        android:textSize="@dimen/size_text"
	        android:layout_marginTop="@dimen/dimen_margintop"
	        android:background="@drawable/selector_button"
	        android:text="@string/about_btnversion" />
        <Button
	        android:id="@+id/btnclear"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/dimen_height"
	        android:layout_marginRight="1dp"
	        android:textColor="@color/color_button_fore"
	        android:textSize="@dimen/size_text"
	        android:layout_marginTop="@dimen/dimen_margintop"
	        android:background="@drawable/selector_button"
	        android:text="@string/about_btnclear" />
		<TextView
		    android:id="@+id/txtcontract"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="@dimen/size_about_txtcontent"
		    android:scrollHorizontally="true"
		    android:singleLine="false"  
    		android:maxLines="30"  
    		android:scrollbars="vertical" 
		    android:background="#00000000"
		    android:layout_marginTop="@dimen/dimen_margintop"
		    android:text="@string/about_txtcontent" />
	</LinearLayout>
</LinearLayout>