<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<ImageView
		    android:id="@+id/imgback"
		    android:layout_width="60dp"
		    android:layout_height="@dimen/dimen_height_title"
		    android:src="@drawable/back"
		    android:background="@drawable/selector_imageback"
		    android:contentDescription="@string/app_img" />
	    <TextView
	        android:id="@+id/tvpaired"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/dimen_height_title"
	        android:textSize="@dimen/size_title"
	  		android:gravity="center"
	        android:textColor="@color/color_button_fore"
	        android:background="@color/color_title_bg"
	        android:text="@string/portset_tvpaired" />
	</LinearLayout>
    <ListView
        android:id="@+id/lvportpaired"
  		android:layout_weight="1"
  		android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/dimen_margintop"
	    android:orientation="horizontal" >
	    <ImageView
			    android:id="@+id/imglist"
			    android:layout_width="wrap_content"
			    android:layout_height="@dimen/dimen_height_title"
			    android:src="@drawable/ico8"
			    android:background="@color/color_title_bg"
			    android:contentDescription="@string/app_img" />
	    <TextView
	        android:id="@+id/tvlist"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/dimen_height_title"
	        android:textSize="@dimen/size_title"
	  		android:gravity="center"
	        android:textColor="@color/color_button_fore"
	        android:background="@color/color_title_bg"
	        android:text="@string/portset_tvlist" />
    </LinearLayout>
    <ListView
        android:id="@+id/lvportlist"
  		android:layout_weight="1"
  		android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
</LinearLayout>
